node-web-app/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-web-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: node-web-app
  template:
    metadata:
      labels:
        app: node-web-app
    spec:
      containers:
      - name: node-web-app
        image: <your-dockerhub-username>/node-web-app
        ports:
        - containerPort: 3000
