node-web-app/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-web-app-service
spec:
  selector:
    app: node-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
