node-web-app/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: halekizir.github.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-web-app-service
            port:
              number: 80
